--- a/Legacy/test/Umbrella.Legacy.WebUtilities.Test/Umbrella.Legacy.WebUtilities.Test.csproj
+++ b/Legacy/test/Umbrella.Legacy.WebUtilities.Test/Umbrella.Legacy.WebUtilities.Test.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net462</TargetFramework>
 		<IsPackable>false</IsPackable>
+		<IsTestProject>true</IsTestProject>
 		<NoWarn>CS1591</NoWarn>
 	</PropertyGroup>
 
