--- a/TypeScript/test/Umbrella.TypeScript.Test/Umbrella.TypeScript.Test.csproj
+++ b/TypeScript/test/Umbrella.TypeScript.Test/Umbrella.TypeScript.Test.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<IsPackable>false</IsPackable>
+		<IsTestProject>true</IsTestProject>
 		<NoWarn>CS1591</NoWarn>
 	</PropertyGroup>
 
