--- a/Core/test/Umbrella.Utilities.Mapping.Mapperly/Umbrella.Utilities.Mapping.Mapperly.Test.csproj
+++ b/Core/test/Umbrella.Utilities.Mapping.Mapperly/Umbrella.Utilities.Mapping.Mapperly.Test.csproj
@@ -5,6 +5,7 @@
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
 		<NoWarn>CS1591</NoWarn>
+		<PreserveCompilationContext>true</PreserveCompilationContext>
 	</PropertyGroup>
 
 	<ItemGroup>
