--- a/DataAccess/test/Umbrella.DataAccess.Abstractions.Test/Umbrella.DataAccess.Abstractions.Test.csproj
+++ b/DataAccess/test/Umbrella.DataAccess.Abstractions.Test/Umbrella.DataAccess.Abstractions.Test.csproj
@@ -5,6 +5,7 @@
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
 		<NoWarn>CS1591</NoWarn>
+		<PreserveCompilationContext>true</PreserveCompilationContext>
 	</PropertyGroup>
 
 	<ItemGroup>
