--- a/TypeScript/test/Umbrella.TypeScript.Test/Umbrella.TypeScript.Test.csproj
+++ b/TypeScript/test/Umbrella.TypeScript.Test/Umbrella.TypeScript.Test.csproj
@@ -5,6 +5,7 @@
 		<IsPackable>false</IsPackable>
 		<IsTestProject>true</IsTestProject>
 		<NoWarn>CS1591</NoWarn>
+		<PreserveCompilationContext>true</PreserveCompilationContext>
 	</PropertyGroup>
 
 	<ItemGroup>
