Fixes Added benchmarks for Umbrella Mapper.

--- a/Core/benchmark/Umbrella.Utilities.Benchmark/Umbrella.Utilities.Benchmark.csproj
+++ b/Core/benchmark/Umbrella.Utilities.Benchmark/Umbrella.Utilities.Benchmark.csproj
@@ -19,6 +19,10 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="PolySharp" Version="1.13.2">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="Moq" Version="4.20.69" />
 	</ItemGroup>
 
