--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,7 +5,7 @@
 		<Nullable>enable</Nullable>
 		<WarningsAsErrors>nullable</WarningsAsErrors>
 		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-		<LangVersion>latest</LangVersion>
+		<LangVersion>preview</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 
