--- a/Core/src/Umbrella.WebUtilities/Umbrella.WebUtilities.csproj
+++ b/Core/src/Umbrella.WebUtilities/Umbrella.WebUtilities.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net6.0;net8.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -23,6 +23,10 @@
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net6.0'">
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="6.0.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
