--- a/DynamicImage/src/Umbrella.DynamicImage.Caching.AzureStorage/Umbrella.DynamicImage.Caching.AzureStorage.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.Caching.AzureStorage/Umbrella.DynamicImage.Caching.AzureStorage.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<NoWarn>CS1591</NoWarn>
+		<TargetFrameworks>netstandard2.0;net6.0;net8.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup>
