--- a/Messaging/src/Umbrella.AzureServiceBus/Umbrella.AzureServiceBus.csproj
+++ b/Messaging/src/Umbrella.AzureServiceBus/Umbrella.AzureServiceBus.csproj
@@ -12,6 +12,7 @@
 	<ItemGroup>
 		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.17.2" />
 		<PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
+		<PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.1" />
 		<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.8.14">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
