--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.DataProtection/Umbrella.AspNetCore.WebUtilities.DataProtection.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.DataProtection/Umbrella.AspNetCore.WebUtilities.DataProtection.csproj
@@ -21,4 +21,8 @@
 		<PackageReference Include="CommunityToolkit.Diagnostics" Version="8.2.2" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
+
 </Project>
