--- a/AspNetCore/src/Umbrella.AspNetCore.Shared/Umbrella.AspNetCore.Shared.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Shared/Umbrella.AspNetCore.Shared.csproj
@@ -15,10 +15,12 @@
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.35" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.35" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.10" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.10" />
 	</ItemGroup>
 
 	<ItemGroup>
