--- a/Maui/src/Umbrella.Maui/Umbrella.Maui.csproj
+++ b/Maui/src/Umbrella.Maui/Umbrella.Maui.csproj
@@ -1,34 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-	<!--<PropertyGroup>
-		<TargetFrameworks>net8.0-android;net9.0-android;net8.0-ios;net9.0-ios</TargetFrameworks>
-		<UseMaui>true</UseMaui>
-		<SingleProject>true</SingleProject>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-
-		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
-		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
-	</PropertyGroup>-->
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
+		<OutputType>Library</OutputType>
+		<EnableDefaultMauiItems>False</EnableDefaultMauiItems>
+		<TargetFramework>net9.0</TargetFramework>
 	</PropertyGroup>
-
 	<PropertyGroup>
 		<PackageId>Umbrella.Maui</PackageId>
 		<Description>This package contains various utilities and controls for use with .NET Maui projects.</Description>
 	</PropertyGroup>
-
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.21" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.21" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="10.0.0" />
 	</ItemGroup>
-
 	<ItemGroup>
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
-
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\Core\src\Umbrella.AppFramework\Umbrella.AppFramework.csproj" />
+		<ProjectReference Include="..\..\..\DynamicImage\src\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
+		<ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
+	</ItemGroup>
 </Project>
