--- a/Generators/test/Umbrella.Generators.StringTrimmer.Test/Umbrella.Generators.StringTrimmer.Test.csproj
+++ b/Generators/test/Umbrella.Generators.StringTrimmer.Test/Umbrella.Generators.StringTrimmer.Test.csproj
@@ -19,13 +19,11 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.SourceGenerators.Testing.XUnit" Version="1.1.2" />
-		<PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers" Version="9.0.0" PrivateAssets="all" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
-	  <ProjectReference Include="..\..\src\Umbrella.Generators.StringTrimmer\Umbrella.Generators.StringTrimmer.csproj" />
+	  <ProjectReference Include="..\..\src\Umbrella.Generators.StringTrimmer\Umbrella.Generators.StringTrimmer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 	<ItemGroup>
