Code cleanup Updated the breadcrumb to take advantage of the new SectionOutlet and SectionContent components and to allow SSR.

--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
@@ -68,6 +68,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Using Include="Microsoft.AspNetCore.Components" />
 		<Using Include="Umbrella.Utilities.Extensions" />
 		<Using Include="Umbrella.AspNetCore.Blazor.Exceptions" />
 	</ItemGroup>
