Added the code fix provider

--- a/Analyzers/src/Umbrella.Analyzers.ModelStandards/Umbrella.Analyzers.ModelStandards.csproj
+++ b/Analyzers/src/Umbrella.Analyzers.ModelStandards/Umbrella.Analyzers.ModelStandards.csproj
@@ -16,6 +16,11 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all" />
 	</ItemGroup>
 
+	<!-- CodeFix packages only for .NET 8+ -->
+	<ItemGroup Condition="'$(TargetFramework)' != 'netstandard2.0'">
+		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.0.1" PrivateAssets="all" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
