--- a/DataAccess/test/Umbrella.DataAccess.Abstractions.Test/Umbrella.DataAccess.Abstractions.Test.csproj
+++ b/DataAccess/test/Umbrella.DataAccess.Abstractions.Test/Umbrella.DataAccess.Abstractions.Test.csproj
@@ -8,6 +8,7 @@
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 		<UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
 		<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+		<WarningsAsErrors>xUnit1051</WarningsAsErrors>
 	</PropertyGroup>
 
 	<ItemGroup>
