--- a/DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Umbrella.DynamicImage.Impl.Test.csproj
+++ b/DynamicImage/test/Umbrella.DynamicImage.Impl.Test/Umbrella.DynamicImage.Impl.Test.csproj
@@ -8,6 +8,7 @@
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 		<UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
 		<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+		<WarningsAsErrors>xUnit1051</WarningsAsErrors>
 	</PropertyGroup>
 
 	<ItemGroup>
