--- a/FileSystem/test/Umbrella.FileSystem.Test/Umbrella.FileSystem.Test.csproj
+++ b/FileSystem/test/Umbrella.FileSystem.Test/Umbrella.FileSystem.Test.csproj
@@ -8,6 +8,7 @@
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 		<UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
 		<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+		<WarningsAsErrors>xUnit1051</WarningsAsErrors>
 	</PropertyGroup>
 
 	<ItemGroup>
