--- a/Generators/test/Umbrella.Generators.StringTrimmer.Test/Umbrella.Generators.StringTrimmer.Test.csproj
+++ b/Generators/test/Umbrella.Generators.StringTrimmer.Test/Umbrella.Generators.StringTrimmer.Test.csproj
@@ -8,6 +8,7 @@
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 		<UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
 		<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+		<WarningsAsErrors>xUnit1051</WarningsAsErrors>
 	</PropertyGroup>
 
 	<ItemGroup>
