--- a/Legacy/test/Umbrella.Legacy.WebUtilities.Test/Umbrella.Legacy.WebUtilities.Test.csproj
+++ b/Legacy/test/Umbrella.Legacy.WebUtilities.Test/Umbrella.Legacy.WebUtilities.Test.csproj
@@ -9,6 +9,7 @@
 		<PreserveCompilationContext>true</PreserveCompilationContext>
 		<UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
 		<TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
+		<WarningsAsErrors>xUnit1051</WarningsAsErrors>
 	</PropertyGroup>
 
 	<ItemGroup>
