--- a/AspNetCore/src/Umbrella.AspNetCore.Shared/Umbrella.AspNetCore.Shared.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Shared/Umbrella.AspNetCore.Shared.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -11,11 +11,6 @@
 
 	<ItemGroup>
 		<SupportedPlatform Include="browser" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="6.0.36" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.36" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
