--- a/Internal/src/Umbrella.Internal.Mocks/Umbrella.Internal.Mocks.csproj
+++ b/Internal/src/Umbrella.Internal.Mocks/Umbrella.Internal.Mocks.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net8.0;net9.0</TargetFrameworks>
 		<IsPackable>false</IsPackable>
 		<NoWarn>CS1591</NoWarn>
 	</PropertyGroup>
@@ -10,7 +10,7 @@
 		<PackageReference Include="Moq" Version="4.20.72" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net6.0'">
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.3" />
 	</ItemGroup>
 
