--- a/Logging/src/Umbrella.Extensions.Logging.ApplicationInsights/Umbrella.Extensions.Logging.ApplicationInsights.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.ApplicationInsights/Umbrella.Extensions.Logging.ApplicationInsights.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net8.0;net9.0</TargetFrameworks>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -18,7 +18,7 @@
 		<PackageReference Include="Microsoft.ApplicationInsights" Version="2.23.0" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'net6.0'">
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.1" />
 	</ItemGroup>
 
